objects/EUR_CRM_Account_Volume_Tracker_Period__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account_Volume_Tracker_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Volume Tracker (EU) Line Item</label>
        <referenceTo>EUR_CRM_Account_Volume_Tracker_Line_Item__c</referenceTo>
        <relationshipName>Account_Volume_Tracker_Periods_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Week_1_Volume__c</fullName>
        <label>Actual Week 1 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Week_2_Volume__c</fullName>
        <label>Actual Week 2 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Week_3_Volume__c</fullName>
        <label>Actual Week 3 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Period_Key__c</fullName>
        <label>Volume Period Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_by_Bottles__c</fullName>
        <label>Volume by Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Volume Tracker (EU) Period</label>
    <listViews>
        <fullName>EUR_Account_Volume_Tracker_Period</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Account_Volume_Tracker_Line_Item__c</columns>
        <columns>EUR_CRM_Actual_Week_1_Volume__c</columns>
        <columns>EUR_CRM_Actual_Week_2_Volume__c</columns>
        <columns>EUR_CRM_Actual_Week_3_Volume__c</columns>
        <columns>EUR_CRM_Actual_Week_4_Volume__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_Volume_by_Bottles__c</columns>
        <columns>EUR_CRM_Volume_Period_Key__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>EUR Account Volume Tracker Period</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AVTP-{0000000000}</displayFormat>
        <label>Account Volume Tracker Period (EU) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Volume Tracker (EU) Periods</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_ZA_Account_Volume_Tracker_Period</fullName>
        <active>true</active>
        <label>EUR ZA Account Volume Tracker Period</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>